--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,5 @@ android {
 
 dependencies {
 //    compile 'com.android.support:support-v4:23.0.2'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
