--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity
             android:name=".ActivityIntro"
             android:screenOrientation="portrait"
+            android:theme = "@android:style/Theme.NoTitleBar"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,16 +36,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SelectActivity" 
-			android:screenOrientation="portrait"		            
+        <activity android:name="SelectActivity"
+                  android:theme = "@android:style/Theme.NoTitleBar"
+                  android:screenOrientation="portrait"
             >
         </activity>
         <activity android:name="FavoritesActivity"
-            android:screenOrientation="portrait"		 
+                  android:theme = "@android:style/Theme.NoTitleBar"
+                  android:screenOrientation="portrait"
             >
         </activity>
-        <activity android:name="TabHostActivity" 
-            android:screenOrientation="portrait"		
+        <activity android:name="TabHostActivity"
+                  android:theme = "@android:style/Theme.NoTitleBar"
+                  android:screenOrientation="portrait"
             >
         </activity>
     </application>
