--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,19 +38,16 @@
         </activity>
         <activity android:name="SelectActivity"
                   android:theme = "@android:style/Theme.NoTitleBar"
-                  android:screenOrientation="portrait"
-            >
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name="FavoritesActivity"
                   android:theme = "@android:style/Theme.NoTitleBar"
-                  android:screenOrientation="portrait"
-            >
-        </activity>
+                  android:screenOrientation="portrait"/>
         <activity android:name="TabHostActivity"
                   android:theme = "@android:style/Theme.NoTitleBar"
-                  android:screenOrientation="portrait"
-            >
-        </activity>
+                  android:screenOrientation="portrait"/>
+        <activity android:name="TestActivity"
+                  android:theme = "@android:style/Theme.NoTitleBar"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
