--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
     android:versionCode="4"
     android:versionName="4" >
 
-    <uses-sdk
-        android:minSdkVersion="11"
-        android:targetSdkVersion="17" />
+    <!--<uses-sdk android:targetSdkVersion="17" />-->
 
     <application
         android:allowBackup="true"
