광고 다시 붙임

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <!-- play-services-ads 17.0.0 이상부터는 앱 ID를 입력해줘야 합니다 -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id"/>
+
         <activity
             android:name="com.wizardlyshop.foodmaster.ViewFlipperActivity"
             android:screenOrientation="portrait"
