--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,6 @@ android {
 }
 
 dependencies {
-        implementation 'com.android.support:support-v4:+'
+//        implementation 'com.android.support:support-v4:+'
+    implementation 'com.google.android.gms:play-services-ads:18.0.0'
 }
