--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ android {
 //        minSdkVersion 26
         minSdkVersion 23
         targetSdkVersion 28
+        versionCode 8
+        versionName "5.00.00.00"
     }
 
     buildTypes {
