--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wizardlyshop.foodmaster"
-    android:versionCode="4"
-    android:versionName="4" >
+    package="com.wizardlyshop.foodmaster">
 
     <!--<uses-sdk android:targetSdkVersion="17" />-->
 
