--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ android {
 dependencies {
 //        implementation 'com.android.support:support-v4:+'
     implementation 'com.google.android.gms:play-services-ads:18.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
