--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wizardlyshop.foodmaster">
-
-    <!--<uses-sdk android:targetSdkVersion="17" />-->
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.wizardlyshop.foodmaster">
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -25,18 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SelectActivity" 
-			android:screenOrientation="portrait"		            
-            >
-        </activity>
-        <activity android:name="FavoritesActivity"
-            android:screenOrientation="portrait"		 
-            >
-        </activity>
-        <activity android:name="TabHostActivity" 
-            android:screenOrientation="portrait"		
-            >
-        </activity>
+        <activity
+            android:name="SelectActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name="FavoritesActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name="TabHostActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
